[metadata]
name = rmk2-py
description = rmk2's Python Toolbox
author = rmk2
author-email = ryko@rmk2.org
home-page = https://gitlab.com/rmk2/rmk2-py
license = GPLv3+
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

[flake8]
max-line-length = 88

[yapf]
based_on_style = pep8
column_limit = 88
